# inteligent-systems-cs5600

./: .gitignore  README.md  model.ipynb  pyproject.toml  sartorius-competition-keras.ipynb
src/: ann.py  ca-defs.lisp  ca-functions.lisp  ca-lexicon.lisp  ca-loader.lisp  ca-utilities.lisp  ca.lisp  cd.lisp  copyme.lisp  data.py  eliza.lisp  gps.lisp  helpers.lisp  hw01.py  hw02.py  hw03.py  hw04.py  hw05.py  keras_image_convnets.py  keras_image_uts.py  keras_load_data.py  load_eliza.lisp  mnist_loader.py  ops.lisp  sam.lisp  tfl_audio_anns.py  tfl_audio_convnets.py  tfl_audio_uts.py  tfl_image_anns.py  tfl_image_convnets.py  tfl_image_uts.py  utils.py
