[tool.poetry]
name = "cs5600"
version = "0.1.0"
description = "Code for Inteligent Systems - cs5600"
authors = ["Palani Johnson <palani.johnson@usu.edu>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.4"
matplotlib = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"